public/css/rts.css
/*
************
************ GENERAL
************
*/
html {
    font-size: 17px;
}

body {
    margin: 0;
    color: #666666;
    font-family: "Gotham SSm A", "Gotham SSm B", "Helvetica", "Arial", "Verdana", sans-serif;
}

h1 {
    font-size: 32px;
    font-weight: 500;
    line-height: 36px;
    margin-top: 0;
    color: #333333;
}

h2 {
    font-size: 19px;
    line-height: 20px;
    color: #333333;
    font-weight: normal;
}

h4 {
    color: #666666;
    font-size: 18px;
    font-weight: normal;
}

/* so modals are always above topbar */
.modal-open .modal {
    z-index: 1350;
}

.btn-link {
    color: #af001e;
    font-size: 16px !important;
}

.last-link {
    font-size: 15px !important;
}

.btn-link:hover, .btn-link:active, .btn-link:focus {
    color: #bf0020;
}

.btn-primary, .btn-danger {
    background-color: #af001e;
    border: 0;
    margin-right: 10px;
    position: relative;
    border-radius: 5px;
    box-shadow: none;
    max-width: 428px;
    height: 45px;
    color: rgba(255, 255, 255, 0.95);
    font-size: 18px;
    font-weight: 300;
}

.btn-primary:hover, .btn-danger:hover {
    background-color: #af001e;
}

.btn-primary:active, .btn-primary:focus, .btn-danger:active, .btn-danger:focus, .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover {
    background-color: #af001e;
}

.btn.btn-large-submit.btn-primary, .btn.btn-large-submit.btn-danger {
    font-size: 18px;
    margin-left: auto;
    margin-right: auto;
}

input.form-control, input.form-control, select.form-control {
    display: inline-block;
    max-width: 430px;
    height: 45px;
    font-size: 18px;
    color: #666;
    border: 1px solid #999999;
    border-radius: 0;
}

select.form-control {
    border: 0;
    outline: 1px solid #999;
    outline-offset: -1px;
}

.input-group .input-group-addon {
    border-radius: 0;
    border: 1px solid #999999;
}

.input-group .input-group-addon:last-child {
    border-left: 0;
}

.form-group .input-group {
    max-width: 430px;
    margin: auto;
}

footer.rts-footer {
    margin-top: 50px;
}

.alert-success.alert-success-custom {
    position: relative;
    background-color: initial;
    border: none;
    padding: 0;
    margin: 25px 0;
}

.alert-success.alert-success-custom > span.glyphicon {
    position: absolute;
    left: -20px;
    top: 3px;
}

#login .btn.btn-large-submit.btn-primary,
#password-recovery .btn.btn-large-submit.btn-primary,
#signup .btn.btn-large-submit.btn-primary {
    font-size: 17px;
}

#rts-custom-login {
    text-align: center;
}

#rts-custom-login form.connect-forms {
    margin: 20px 0 5px 0;
}

#rts-custom-login .link-login {
    font-size: 18px;
}

#rts-custom-login #rts-login-panel {
    display: block;
}

#rts-custom-login .link-login .btn-link {
    font-size: 18px !important;
}

#rts-custom-login #rts-login-panel .password-recovery-block {
    display: block;
    font-size: 17px;
    margin-top: 2px;
    text-align: right;
    max-width: 430px;
    margin-left: auto;
    margin-right: auto;
}

#rts-custom-login .form-group #password-bar {
    max-width: 430px;
    margin-left: auto;
    margin-right: auto;
}

#rts-custom-login #rts-login-panel .login-images, #login .login-images {
    height: 45px;
    width: 45px;
    cursor: pointer;
}

#rts-custom-login #rts-login-panel .login-social-labels, #login .login-social-labels {
    font-size: 15px;
    margin-top: 5px;
}

#rts-custom-login #rts-login-panel .identity_provider {
    color: #666666;
    display: inline-block;
    margin-left: 20px;
}

#rts-custom-login #rts-login-panel .identity_provider:first-child {
    margin-left: 0;
}

#rts-custom-login #rts-login-panel .identity_provider:hover {
    text-decoration: none;
    color: #666666;
}

#rts-custom-login #rts-login-panel .social {
    margin-top: 30px;
    margin-bottom: 20px;
}

#rts-custom-login #rts-login-panel .providers-links{
    color: inherit;
}

#rts-custom-login #rts-signup-panel, #rts-custom-login #rts-password-panel {
    display: none;
}

#rts-custom-login #rts-signup-panel select {
    color: #999;
}

#rts-custom-login .alert-message-error, #rts-custom-login .alert-message-success,  #rts-oauth-dialog .alert-message-error{
    display: none;
    max-width: 430px;
    padding: 15px 10px;
    text-align: left;
    font-size: 15px;
    margin: 30px auto 15px auto;
}

#rts-oauth-dialog {
    display: block;
    font-size: 17px;
    margin-top: 2px;
    max-width: 430px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    color: #666666;
    font-family: "Gotham SSm A", "Gotham SSm B", "Helvetica", "Arial", "Verdana", sans-serif;
}

#rts-oauth-dialog h1 {
    font-size: 20px;
    overflow: auto;
}

#rts-oauth-dialog p {
    margin: 20px 0 40px 0;
}

#rts-oauth-dialog .alert-message-error p {
    margin: 0;
}

#rts-oauth-dialog #allow {
    width: 100%;
    display: block;
}

#rts-oauth-dialog .block-link {
    display: block;
    margin-top: 20px;
}

#rts-oauth-dialog .block-link .link-cancel{
    display: block;
    color: #af001e;
    cursor: pointer;
    background: none;
    border: 0;
    outline: none;
    margin: auto;
}

#rts-oauth-dialog .disconnect-block {
    display: block;
    text-align: justify;
    margin-top: 25px;
}

#rts-oauth-dialog a#disconnect {
    color: #af001e;
    cursor: pointer;
}
#rts-oauth-dialog a#disconnect:hover {
    text-decoration: none;
}

#profile hr, #devices hr {
    border-color: #333;
}

#profile .delete-container p, #profile .verification-link-container p {
    color: #666666;
    font-size: 1.6rem;
}

#profile #form-personnal-data h4 {
    font-size: 18px;
    margin-top: 10px;
    color: #666666;
    text-transform: uppercase;
}

#profile .accountNotVerified p, #profile .accountVerified p{
    font-size: 17px;
}

#profile .form-group #password-bar {
    max-width: 430px;
}

#profile #form-personnal-data span {
    font-size: 16px !important;
}

#profile #form-personnal-data #btn-container span.pull-right {
    margin-top: 10px;
}

#profile #form-personnal-data .panel {
    border: 0;
}

#profile .status-info {
    font-size: 16px !important;
}

#profile .providers-container .facebook-text {
    font-size: 20px !important;
}

#profile #delete-div {
    font-size: 16px;
}

#profile #btn-container {
    max-width: 430px;
}

#profile .hasNoPassword {
    margin-top: 20px;
}

#profile label, #profile form label, #profile .form-group label{
    display: block;
    font-size: 17px;
    font-weight: 300;
}

#profile .hasPassword {
    margin-bottom: 15px;
}

#profile .hasPassword button.btn-link, #profile #btn-modify-password {
    margin-top: 5px;
}

#profile .hasPassword button.btn-link i, #profile #btn-modify-password i {
    display: none;
}

#profile .btn.btn-large-submit.btn-primary,#profile .btn.btn-large-submit.btn-danger {
    font-size: 15px;
}

#profile .col-sm-9 .first.providers-container {
    font-size: 16px;
}

#profile .input-group.date {
    max-width: 430px;
}

#home .home-panel .panel-body h3 {
    color: #333;
}

#home .home-panel .panel-body span.glyphicon {
    color: #af001e;
}

.modal .modal-dialog {
    font-size: 16px;
    text-align: justify;
}

.modal .modal-dialog .modal-content .form-group label{
    display: block;
    font-weight: 500;
}

.modal .modal-dialog .modal-content .form-group input{
    margin-bottom: 10px;
}

.modal .modal-dialog .modal-content .form-group input:last-child{
    margin-bottom: 0;
}

.modal .modal-dialog .modal-content p:first-child{
    margin: 10px 0px 20px 0;
}

.modal .modal-dialog .btn.btn-large-submit, .modal .modal-dialog .btn.btn-normal-submit {
    font-size: 15px;
}

#profile .btn-default, .modal .modal-dialog .btn-default{
    color: #333;
    background-color: #fff;
    border-color: #ccc;
    margin-right: 10px;
    position: relative;
    border-radius: 5px;
    box-shadow: none;
    max-width: 428px;
    height: 45px;
    font-size: 15px;
    font-weight: 300;
}

/*FIXES for IE popup*/
main.boutique {
    margin-top: 10px;
}

main.boutique h1{
    margin-bottom: 5px;
}

